...
                    .testTag("SwitchButton"),
        ) {
          Button(
              onClick = onClickLeft,
              colors = ButtonDefaults.buttonColors(containerColor = leftColor),
              modifier =
                  Modifier.fillMaxWidth(0.5f).fillMaxHeight().testTag("SwitchButtonLeftButton"),
          ) {
            Text(
                text = textLeft,
                fontSize = 12.sp,
                color = leftTextColor,
                overflow = TextOverflow.Clip)
          }
          Button(
              onClick = onClickRight,
              colors = ButtonDefaults.buttonColors(containerColor = rightColor),
              modifier =
                  Modifier.fillMaxWidth(1f).fillMaxHeight().testTag("SwitchButtonRightButton"),
          ) {
            Text(
                text = textRight,
                fontSize = 12.sp,
                color = rightTextColor,
                overflow = TextOverflow.Clip,
...
