...
fun FlightCalendar(
    padding: PaddingValues,
    getFirstFlightByDate: (LocalDate, TimeSlot) -> Flight?,
    onFlightClick: (String) -> Unit
) {
  Column(modifier = Modifier.padding(padding)) {
    ModularCalendar(modifier = Modifier, isDraft = false) { date, time ->
      val flight = getFirstFlightByDate(date, time)
      FlightTile(
          date = date,
          time = time,
          flight = flight,
      ) {
...
