package ch.epfl.skysync.ui.theme

/** contains all titles ordered by their screen */

/** Home screen */

/** Title of the home screen */
object ScreenTitles {
  const val HOME = "Upcoming flights"
  const val MESSAGES = "Messages"
  const val HISTORY = "Flights History"
}
