...
    LoadingComponent(isLoading = true, onRefresh = {}) {}
  } else if (flights.isEmpty()) {
    NoAvailableFlights()
  } else {
    // Display the flights in a LazyColumn if the list is not empty
    val sortedFlights = flights.sortedBy { it.date }
    LazyColumn(modifier = Modifier.testTag("HomeLazyList").padding(paddingValues)) {
      items(sortedFlights) { flight -> FlightCard(flight, onFlightClick) }
    }
  }
}

/** A composable function that displays a text "No flights" when there are no flights available. */
...
